--- a/main1.html
+++ b/main1.html
@@ -16,7 +16,7 @@
                 margin: 0;
                 padding: 0;
             }
-            .col-1{width: 8.333333%;}
+            .col-1{width: 8.3333333%;}
             .col-2{width: 16.666666%;}
             .col-3{width: 25%;}
             .col-4{width: 33.333333%;}
@@ -123,7 +123,7 @@
 
             img.setAttribute("src",color)
             picc.append(img);
-            pric.append(pricee+'元');
+            pric.append(pricee+' 元');
 
 
 
